2019-02-28 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix max decimals option for intervals displayed with significant digits (was used as both max and min)

2019-02-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add "Number of decimals" and "Round halfway to even" (default away from zero) arguments to round() function

2019-02-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Restore A and B (case insensitive) digits in input of duodecimal number
	* Use 0d as prefix for input of duodecimal numbers
	* Always interpret expression as duodecimal if it contains duodecimal Unicode characters

2019-02-13 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* IEEE 754 floating point (binary) conversion - functions float(), floatBits(), floatError(), floatParts(), and floatValue(), and "to" conversion using  binary16/fp16, binary32/fp32/float, binary64/fp64/double, fp80, and binary128/fp128
	* Support specification of number of bits for binary "to" conversion (4 to bin16 = 0000 0000 0000 0100)
	* Fix rounding with max decimals in some cases

2019-02-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix segfault in solve() with AND and OR in solution

2019-02-01 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Modify behavior of floor(), ceil(), trunc and round() - mark result as exact, allow approximate calculation of argument in exact mode, return interval when appropriate (e.g. floor(interval(1.5,2.5))=interval(1, 2))
	* Increase input buffer length (maximum length of line) in qalc

2019-01-31 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Write interval using significant digits in CSV file

2019-01-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix 1kOhm||1kOhm (and similar)

2019-01-24 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not include pregenerated reference documentation in source package and move documentation generation from autogen.sh to Makefile

2019-01-16 Hanna Knutsson <hanna.knutsson@protonmail.com>
