@@ -2322,6 +2322,9 @@
       <argument index="6">
         <_title>Use step size</_title>
       </argument>
+      <argument index="7">
+        <_title>Persistent</_title>
+      </argument>
       <_description>Plots one or more expressions or vectors. Use a vector for the first argument to plot multiple series. Only the first argument is used for vector series. It is also possible to plot a matrix where each row is a pair of x and y values.</_description>
       <example>$name([x^2, 2x, [0,1,4,8,16]], 0, 4).</example>
     </builtin_function>
